# ToyTrace

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  atmosphere.cxx  atmosphere.hxx  box.hxx  bsptree.cxx  bsptree.hxx  camera.hxx  conanfile.txt  determine_ray_offset_experimentally.cxx  embreeaccelerator.cxx  embreeaccelerator.hxx  group.hxx  image.cxx  image.hxx  infiniteplane.hxx  light.cxx  light.hxx  material.hxx  naivetrace.cxx  parsenff.cxx  perspectivecamera.hxx  phasefunctions.cxx  phasefunctions.hxx  primitive.cxx  primitive.hxx  radianceorimportance.hxx  ray.cxx  ray.hxx  readme.md  renderbuffer.hxx  rendering_pathtracing_impl.hxx  rendering_randomwalk_impl.hxx  renderingalgorithms.cxx  renderingalgorithms.hxx  renderingalgorithms_pt.hxx  sampler.cxx  sampler.hxx  (+21 more)
cmake/: FindTBB.cmake
misc/: .gitignore  .gitsubmodules  AreaLightRenderingTests.ipynb  AtmosphericData.ipynb  BlueMarbleReflectanceCorrection.ipynb  BlueNoiseDitherPattern.ipynb  CameraAndImageSamples.ipynb  FastExponentialApproximation.ipynb  FittingMoVMFToBsdf.ipynb  FloatingPointAdventures.ipynb  GuidingGmm.ipynb  GuidingGmmSamplingPlusEmVorbaStyle.ipynb  GuidingMoVMF.ipynb  GuidingQuadtree.ipynb  GuidingRadianceRecordsVisualization2.ipynb  IntegrationOnManifoldsSympy.ipynb  IntegrationOnManifoldsSympyNo2.ipynb  MISwithDeltaFunctionInIntegrand.ipynb  MakeOpenexrTestImage.ipynb  MicrofacetModelPrototyping.ipynb  PathDebug.ipynb  PhasefunctionDebug.ipynb  SamplerCheck.ipynb  ScatterfunctionDebug.ipynb  SimpleCloudGenerator.ipynb  SobolSequenceGeneratorMatrices.ipynb  SolarRadiationDataConversion.ipynb  SpectraGenerationSmitsWay.ipynb  SpectraReconstructionExperimentation.ipynb  Stereoprojection1.ipynb  TheJacobianOfTheSpecialReflection.ipynb  UCBAlgoTest.ipynb  automated_test_renderings.py  deltatracking.py  mediumspec.py  new-joe-kuo-5.21201  out.exr  path_guiding_kdtree_loader.py  path_guiding_kdtree_visualization.py  pathslogtovtk.py  (+3 more)
misc/atmospheric_data/: ASTMG173_solar_radiation_dataset.txt  elterman_1968_aerosole_attenuation_vs_altitude.csv  elterman_1968_aerosole_attenuation_vs_altitude.dig  elterman_1968_aerosole_attenuation_vs_lambda.csv  elterman_1968_aerosole_attenuation_vs_lambda.dig  handbook_of_geophysics_fig18-13.csv  handbook_of_geophysics_fig18-13.dig  ozone_mixing_ratio_from_spectralcalc.csv  ozone_mixing_ratio_from_spectralcalc.dig
src/: atmosphere.cxx  atmosphere.hxx  box.hxx  camera.hxx  cubature_wrapper.hxx  cubemap.hxx  distribution_mixture_models.cxx  distribution_mixture_models.hxx  embreeaccelerator.cxx  embreeaccelerator.hxx  experimentation.cxx  hashgrid.hxx  image.cxx  image.hxx  infiniteplane.hxx  json.hxx  json_fwd.hxx  light.cxx  light.hxx  lightpicker_trivial.cxx  lightpicker_trivial.hxx  lightpicker_ucb.cxx  lightpicker_ucb.hxx  linklist.hxx  media_integrator.cxx  media_integrator.hxx  memory_arena.hxx  ndarray.hxx  normaldistributionfunction.hxx  parse_common.cxx  parse_common.hxx  parse_yaml_scene.cxx  parsenff.cxx  path_guiding.cxx  path_guiding.hxx  path_guiding_py.cxx  path_guiding_quadtree.cxx  path_guiding_quadtree.hxx  path_guiding_tree.cxx  path_guiding_tree.hxx  (+58 more)
src/eigen_plugins/: eigen.hxx  eigen_array_plugin.hxx  eigen_matrix_plugin.hxx
testing/: .gitignore  automated_test_renderings.py
testing/scenes/: atmosphere.nff  atmosphere_backlit.nff  atmosphere_space.nff  atmosphere_textured.nff  box_in_cornelbox.dae  cornelbox.dae  cornelbox_laser.nff  cornelbox_parabolic_reflector.nff  cornelbox_steelbunny.nff  cornelbox_translucentbunny.nff  cornelbox_translucentmeshsphere.nff  cornelbox_translucentsphere.nff  cubelight.nff  earth_atmosphere_collision_coefficients.json  env_sphere_mirror.nff  env_sphere_mirror_plus_area.nff  litcorner.nff  litcorner2.nff  material_test_scene.c4d  material_test_scene.nff  medium_backlighting_area.nff  medium_backlighting_area2.nff  medium_backlighting_area3.nff  medium_backlighting_directional.nff  medium_backlighting_directional2.nff  medium_backlighting_directional3.nff  medium_backlighting_point2.nff  medium_in_medium.nff  nested_media1.nff  nested_media2.nff  off_center_rgb_cmy.nff  refract_beam_at_cube.nff  refractive_sphere_caustics.nff  refractive_sphere_caustics_wo_medium.nff  test_lowpoly_sphere.nff  texloadtest2.exr  texture_test.nff  transmissivity_depending_on_angle.nff  transmissivity_depending_on_angle2.nff  unitcube.dae  (+9 more)
